--- a/FlyWhizz/Base.lproj/Main.storyboard
+++ b/FlyWhizz/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="oda-hd-2kJ" kind="push" id="nkA-5f-Yt9"/>
+                                    <action selector="searchFlights:" destination="9pv-A4-QxB" eventType="touchUpInside" id="Ffb-dp-42M"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uQd-DF-cmD">
@@ -68,6 +68,7 @@
                         <outlet property="searchDisplayController" destination="jK4-24-eUg" id="O59-jw-mjB"/>
                         <outlet property="tableView" destination="uQd-DF-cmD" id="tTn-Ov-3ij"/>
                         <segue destination="zDM-Tm-SqK" kind="push" identifier="SavedFlights" id="43N-lc-6JW"/>
+                        <segue destination="oda-hd-2kJ" kind="push" identifier="Search" id="02b-FO-x3n"/>
                     </connections>
                 </viewController>
                 <searchDisplayController id="jK4-24-eUg">
